<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />
    <item
        android:id="@+id/nav_change_password"
        android:icon="@drawable/ic_change_password"
        android:title="@string/change_password" />
    <item
        android:id="@+id/nav_find_parking"
        android:icon="@drawable/ic_find_parking"
        android:title="@string/find_parking" />
    <item
        android:id="@+id/nav_recommended_parking"
        android:icon="@drawable/ic_recommended_parking"
        android:title="@string/recommended_parking" />
    <item
        android:id="@+id/nav_old_reservations"
        android:icon="@drawable/ic_old_reservations"
        android:title="@string/old_reservations" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>
