<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:background="@drawable/home_background">

    <!-- Main Content with Shortcut Buttons -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:gravity="center">

            <Button
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

            <Button
                android:id="@+id/btn_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback" />

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password" />

            <Button
                android:id="@+id/btn_find_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_parking" />

            <Button
                android:id="@+id/btn_recommended_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_parking" />

            <Button
                android:id="@+id/btn_old_reservations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_reservations" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout" />

        </LinearLayout>
    </RelativeLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
